<resources>
    <string name="app_name">IITDO</string>
    <string name="tequila_name">Indian International Trade Development Organisation</string>
    <string name="tequila_tagline">भारतीय अंतर्राष्ट्रीय व्यापर विकास संगठन</string>
    <string name="tequila_title">Indian International Trade Development Organisation</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="action_okay">OKAY</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cust_organization_name">Indian International Trade Development Organization</string>
    <string name="cust_office_address">503A, Prabhat Kiran Building,\n
    Rajendra Place,\n
    New Delhi – 110008\n
    </string>
    <string name="cust_office_contact_number">(+91)-11-47463456</string>
    <string name="cust_office_email"> iitdoindia@gmail.com, info@iitdo.org</string>
    <string name="cust_office_web">www.iitdo.org</string>
    <string name="fdi_input_text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttit</string>
    <string name="fdi_input_text_2">Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames</string>
    <string name="categories_1">Home</string>
    <string name="categories_2">About</string>
    <string name="categories_3">Sectors</string>
    <string name="categories_4">Services</string>
    <string name="categories_5">International</string>
    <string name="categories_6">Events</string>
    <string name="categories_7">Membership</string>
    <string name="categories_8">States</string>
    <string name="categories_9">Publications</string>
    <string name="categories_10">Contact Us</string>
    <string-array name="country_list">
        <item>India</item>
        <item>Others</item>
    </string-array>
    <string-array name="packages_list_india">
        <item>Diamond (1,00,00,000 INR)</item>
        <item>Platinum (50,00,000 INR)</item>
        <item>Gold (5,00,000 INR)</item>
        <item>Corporate(1,00,000 INR)</item>
        <item>Business (50,000 INR)</item>
        <item>Ordinary (25,000 INR)</item>
        <item>Student (1,000 INR)</item>
    </string-array>
    <string-array name="packages_list_others">
        <item>Diamond (2,00,000 USD)</item>
        <item>Platinum (1,00,000 USD)</item>
        <item>Gold (20,000 USD)</item>
        <item>Corporate (2,000 USD)</item>
        <item>Business (1,000 USD)</item>
    </string-array>
    <string name="subcategories_about_1">About Us</string>
    <string name="subcategories_about_2">Mission &amp; Vision</string>
    <string name="subcategories_about_3">Patrons, Advisors &amp; Chairman(Country/State)</string>
    <string name="subcategories_about_4">Board Members</string>
    <string name="subcategories_about_5">IITDO Boards</string>
    <string name="subcategories_sectors_1">Foreign Trade Development Board</string>
    <string name="subcategories_sectors_2">Agriculture and Food Processing Board</string>
    <string name="subcategories_sectors_3">Finance and Taxation Board</string>
    <string name="subcategories_sectors_4">Legal &amp; IPR Board</string>
    <string name="subcategories_sectors_5">Arts &amp; Culture Board</string>
    <string name="subcategories_sectors_6">Education &amp; HRD Board</string>
    <string name="subcategories_sectors_7">Metals &amp; Minerals Board</string>
    <string name="subcategories_sectors_8">IT &amp; Infrastructure Board</string>
    <string name="subcategories_sectors_9">Sports &amp; Youth Affairs Board</string>
    <string name="subcategories_sectors_10">Health &amp; Wellness Board</string>
    <string name="subcategories_sectors_11">Defense &amp; Safety Board</string>
    <string name="subcategories_sectors_12">Media &amp; Entertainment Board</string>
    <string name="subcategories_services_1">Research &amp; Report</string>
    <string name="subcategories_services_2">Arbitration Facilitation</string>
    <string name="subcategories_services_3">B2B</string>
    <string name="subcategories_services_4">CSR</string>
    <string name="subcategories_services_5">Business Development</string>
    <string name="subcategories_services_6">Workshop &amp; Seminar</string>
    <string name="subcategories_services_7">Networking</string>
    <string name="subcategories_services_8">Program &amp; Initiative</string>
    <string name="subcategories_services_9">Skills Development</string>
    <string name="subcategories_services_10">Women Entrepreneurship</string>
    <string name="subcategories_international_1">Asia</string>
    <string name="subcategories_international_2">Africa</string>
    <string name="subcategories_international_3">Australia</string>
    <string name="subcategories_international_4">Europe</string>
    <string name="subcategories_international_5">Middle East</string>
    <string name="subcategories_international_6">North America</string>
    <string name="subcategories_international_7">South America</string>
    <string name="subcategories_events_1">Past Events</string>
    <string name="subcategories_events_2">Future Events</string>
    <string name="subcategories_membership_1">Directory</string>
    <string name="subcategories_membership_2">Join Us</string>
    <string name="subcategories_publications_1">Photo Gallery</string>
    <string name="subcategories_publications_2">Press Release</string>
    <string name="subcategories_publications_3">Knowledge Partner</string>
    <string name="subcategories_publications_4">News Letter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_investment_opportunities">InvestmentOpportunitiesActivity</string>
    <string name="title_activity_opportunity">OpportunityActivity</string>
    <string name="fragment_home_about_body">Organisation of India and International people who promotes the values of Vasudhaiva Kutumbakam “वसुधैव कुटुम्बकम”a Sanskrit phrase that means that the whole world is one single family. \n \n
        Organisation believes on“Development of trade with strong values &amp; strong network”.\n \n
        IITDO represents &amp;provide platform to organisation and individuals for developing strong network, updating new information, knowledge, skills, products and services, market information etc, time to time with a focus on small entrepreneurs &amp; start-ups for their sustainable development in the international supply chain &amp; for positive contribution towards nation’s growth.\n \n
        Organisation will impart necessary skills and knowledge to inspire, motivated and enable entrepreneurs to harness opportunity globally and develop a strong network who will be contributing towards Innovative, Digital, Clean, Skilled &amp; developed India.\n \n
        IITDO supports business and industry by working closely on government policy &amp; government Initiatives &amp; encouraging debate, engaging with policy makers and civil society and bridge the gap between trade requirements and government initiatives and  create and sustain a conducive environment to the development of India by partnering industry, Government, and civil society, through advisory and consultative processes.\n \n
        IITDO Extends its agenda beyond business &amp; assists industry to undertake programs on “Social Responsibilities Initiatives”. Enhancing awareness as well as involvement of member in various social and environmental causes. Partnerships with civil society organizations carry forward corporate initiatives for integrated and inclusive development across diverse domains including, environment, affirmative action, healthcare, education, livelihood, skill development, empowerment of women, and water and develop a strong network who will  be contributing towards Innovative, Digital, Clean, Skilled &amp; developed  India.</string>
</resources>