<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ContactActivity">

    <!--Contact Form section starts here-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/chivo_regular"
                android:text="Send us your query"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_15sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo_light"
                        android:hint="Enter your name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo_light"
                        android:hint="Enter your email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contact_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo_light"
                        android:hint="Enter your contact number"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/msg_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo_light"
                        android:hint="Enter your message"
                        android:inputType="text"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/sign_in_button1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/button_round"
                    android:elevation="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/login_tv_google"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/chivo_regular"
                            android:text="SEND MESSAGE"
                            android:textColor="@color/color_white"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!--Contact Form section ends here-->

    <!--Address Section starts here-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="Our Presence"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/chivo_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/cust_organization_name"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/chivo_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/cust_office_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/chivo_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/cust_icon_call"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/cust_office_contact_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/chivo_light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/cust_icon_email"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/cust_office_email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/chivo_light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/cust_icon_web"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/cust_office_web"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/chivo_light"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!--Address Section ends here-->

</LinearLayout>